# gif-author

./: .clang  .gitignore  Makefile.am  README.md  configure.ac  libtool  test.sh
gif-author/: gifauthor.py
src/: bitset.h  colorquantizer.cc  colorquantizer.h  factory.h  gifauthor.cc  gifauthor.h  gifencoder.cc  gifencoder.h  helloworld.cc  helloworld.h  imagearea.cc  imagearea.h  imagesegmenter.cc  main.c  main.cc  mainwindow.cc  mainwindow.h  navigation.cc  navigation.h  pages.cc  pages.h  sample-window.c  sample-window.h  segmenter.cc  segmenter.h  settings.h  video.h  videocache.cc  videocache.h  videocontrol.cc  videocontrol.h  videofile.cc  videofile.h  videoframe.cc  videoframe.h  videoplayer.cc  videoplayer.h  videoscrollbar.cc  videoscrollbar.h  videosequence.cc  (+1 more)
src/encoder/: colorquantizer.cc  colorquantizer.h  colortablelookup.cc  colortablelookup.h  ditherer.cc  ditherer.h  gifencoder.cc  gifencoder.h  segmenter.cc  segmenter.h
src/input/: video.h  videofile.cc  videofile.h  videoframe.cc  videoframe.h
src/output/: LZW.cc  LZW.h  gif.cc  gif.h  main.cc  preprocess.h
src/util/: bitset.cc  bitset.h  cline.cc  cline.h  exceptions.cc  exceptions.h  factory.h  out.cc  out.h  process.cc  process.h  settings.cc  settings.h
src/video/: deblocking.cc  deblocking.h  imagesequence.cc  imagesequence.h  motion.cc  motion.h  video.h  videofile.cc  videoframe.cc  videoframe.h
src/widgets/: framebox.cc  framebox.h  gifsettings.h  headernavigation.cc  headernavigation.h  imagearea.cc  imagearea.h  navigation.cc  navigation.h  pages.cc  stacknavigation.cc  stacknavigation.h  videoclipper.cc  videoclipper.h  videocontrol.cc  videocontrol.h  videoplayer.cc  videoplayer.h  videoscrollbar.cc  videoscrollbar.h
